; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/utils/extr_xml_libxml2.c_xml_node_get_text.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/utils/extr_xml_libxml2.c_xml_node_get_text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.xml_node_ctx = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @xml_node_get_text(%struct.xml_node_ctx* %0, i32* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.xml_node_ctx*, align 8
  %5 = alloca i32*, align 8
  store %struct.xml_node_ctx* %0, %struct.xml_node_ctx** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %5, align 8
  %7 = ptrtoint i32* %6 to i32
  %8 = call i64 @xmlChildElementCount(i32 %7)
  %9 = icmp sgt i64 %8, 0
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %16

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = ptrtoint i32* %12 to i32
  %14 = call i64 @xmlNodeGetContent(i32 %13)
  %15 = inttoptr i64 %14 to i8*
  store i8* %15, i8** %3, align 8
  br label %16

16:                                               ; preds = %11, %10
  %17 = load i8*, i8** %3, align 8
  ret i8* %17
}

declare dso_local i64 @xmlChildElementCount(i32) #1

declare dso_local i64 @xmlNodeGetContent(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
